Add initial animation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>React-animation Demo</title>
     <style>
+      .example-appear {
+        opacity: 0.01;
+      }
+      .example-appear.example-appear-active {
+        opacity: 1;
+        transition: opacity .5s ease-in;
+      }
       .example-enter {
         opacity: 0.01;
       }
