Add toggle component

--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
         opacity: 0.01;
         transition: opacity 300ms ease-in;
       }
+      .toggle-appear {
+        opacity: 0.01;
+      }
+      .toggle-appear.toggle-appear-active {
+        opacity: 1;
+        transition: opacity .5s ease-in;
+      }
+      .toggle-enter {
+        opacity: 0.01;
+      }
+      .toggle-enter.toggle-enter-active {
+        opacity: 1;
+        transition: opacity 500ms ease-in;
+      }
+      .toggle-leave {
+        opacity: 1;
+      }
+      .toggle-leave.toggle-leave-active {
+        opacity: 0.01;
+        transition: opacity 300ms ease-in;
+      }
     </style>
   </head>
   <body>
